src/objects/DFDT_Project__c.object
<CustomObject>
    <fields>
        <fullName>Access_to_current_system_screen_shots__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to current system/screen shots</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_to_data_for_migration_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to data for migration confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DreamTeam  Projects</relationshipLabel>
        <relationshipName>R00N30000000unmmEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_UN_PW_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin UN/PW Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Rate__c</fullName>
        <label>Billable Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Link</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DreamTeam  Projects</relationshipLabel>
        <relationshipName>R00N30000000unvSEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Agreement_with_SOW__c</fullName>
        <label>Client Agreement with SOW</label>
        <picklist>
            <controllingField>SOW_Discussed__c</controllingField>
            <picklistValues>
                <fullName>Agreed and anxious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed and tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressed reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressed disinterest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Baseline__c</fullName>
        <label>Cost Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finish_Baseline__c</fullName>
        <label>Finish Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finish__c</fullName>
        <label>Finish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folder_Link__c</fullName>
        <label>Folder Link</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Points_of_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Points of Contact Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mktg_Materials_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mktg Materials Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DreamTeam  Projects</relationshipLabel>
        <relationshipName>R00N30000000unwfEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Chart_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Org Chart Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reasons__c</fullName>
        <label>Reasons</label>
        <picklist>
            <controllingField>Client_Agreement_with_SOW__c</controllingField>
            <picklistValues>
                <fullName>Level of understanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding issues/questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost estimate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SOW_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Discussed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Baseline__c</fullName>
        <label>Start Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Pass_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User/Pass Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacation_Days__c</fullName>
        <label>Vacation Days</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Days__c</fullName>
        <label>Work Days</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DreamTeam Project</label>
    <nameField>
        <label>DFDT Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>